--- a/app/views/index.html.erb
+++ b/app/views/index.html.erb
@@ -1,13 +1,8 @@
-<html>
-	<head>
-		<!DOCTYPE HTML>
-		<title><u>Indice</u></title>
-	</head>
-	<body bgcolor="#81DAF5">
-			<h1>Todos los Productos</h1>
-			<%for producto_actual in @productos then%>
-    		  <a href="direccion enlace producto><img src="<%producto.imagen%>"></a>
-    		  <%producto.titular%>
-    		<%end%>
-	</body>
-</html>
+
+
+<h1>Todos los Productos</h1>
+<%for producto_actual in @productos then%>
+<a href="/Ticketing/detalle_producto"><img src="<%=producto_actual.Imagen%>"></a>
+<%=producto_actual.Titular%>
+<%end%>
+
