--- a/app/views/producto/detalles_producto.html.erb
+++ b/app/views/producto/detalles_producto.html.erb
@@ -3,5 +3,5 @@
 			
 			<%= @productos.descripcion%><br>
 			<%= @productos.precio%><br>
-			<a href="/producto/formularioRegistro">Comprar</a>
+			<a href="/producto/formularioRegistro?id=<%= @productos.id %>">Comprar</a>
 			<a href="/producto/index">Volver</a>
