--- a/app/views/producto/detalle_producto.html.erb
+++ b/app/views/producto/detalle_producto.html.erb
@@ -1,8 +1,6 @@
-
-
-<h1><%=@producto.Titulo%></h1>
-<img src="../assets/imagenes/<%=@producto.Imagen%>"/>
-<%=@producto.Descripcion%><br>
-<%=@producto.Precio%><br>
-<a href="/Ticketing/formularioRegistro">Comprar</a>
-<a href="/Ticketing/index">Volver</a>
+<h1><%= @productos.titular %></h1>
+			
+			<%= @productos.descripcion%><br>
+			<%= @productos.precio%><br>
+			<a href="/producto/formularioRegistro?id=<%=@productos.id %>">Comprar</a>
+			<a href="/producto/index">Volver</a>
