--- a/app/views/producto/formularioRegistro.html.erb
+++ b/app/views/producto/formularioRegistro.html.erb
@@ -1,55 +1,30 @@
 <!-- Resumen del pedido realizado-->
 
 <h3>Resumen del pedido</h3>
+<!-- Resumen del pedido realizado-->
 
 <!-- producto -> titular -->
-El producto seleccionado ha sido: 
-<input type="text" name="titular" value="<%=@producto.Titular%>"/>
+El producto seleccionado ha sido: <%=@productos.titular%> <br/>
 <!-- producto -> descripción -->
-Aquí metemos la descripción del  producto:
-<textarea name="descripcion" rows="10" cols="50" value="<%=@producto.Descripcion%>"></textarea>
-<!-- producto -> imagen -->
-Aquí metemos la imagen del  producto 
-<img  src="<%=@producto.Imagen%>"/>
+Descripción:<%=@productos.descripcion%><br/>
+Imagen:<img  src="<%=@productos.imagen%>"/><br/>
+Precio:<%=@productos.precio%><br/>
+Tipo: <%=@productos.tipoProducto%><br/>
+
 
 <!-- Enlace de vuelta al detalle -->
-<a href="">Volver</a>
+<a href="/producto/detalle_producto?id=<%= @productos.id %>">Volver</a>
 
 
 
 <h4>Rellene los datos del pedido</h4>
 <!-- Formulario de registro del usuario para el pedido-->
-<%= form_tag({controller:"realizar_pedido",action:"pagar"}, method:"get") do %>
+<%= form_tag({controller:"pedido",action:"pagarVista"}, method:"get") do %>
 	<br/>
-	<%=label_tag(:nombre_usuario, "Nombre:")%>
-	<%= text_field_tag(:nombre_usuario)%>
+	<%=label_tag(:mail, "Direccion de correo:")%>
+	<%=email_field_tag(:mail )%><br/>
 	
-	<%=label_tag(:apellidos_usuario, "Apellidos:")%>
-	<%= text_field_tag(:apelllidos_usuario)%><br/>
-	
-	<%=label_tag(:nif, "NIF/CIF:")%>
-	<%=text_field_tag(:nif )%><br/>
-	
-	<%=label_tag(:dir, "Dirección:")%>
-	<%=text_field_tag(:dir)%>
-	
-	<%=label_tag(:num_calle, "Número:")%>
-	<%=number_field_tag(:num_calle)%><br/>
-	
-	<%=label_tag(:cp, "Código postal:")%>
-	<%=number_field_tag(:cp)%><br/>
-	
-	<%=label_tag(:localidad, "Localidad:")%>
-	<%= text_field_tag(:localidad)%>
-	
-	<%=label_tag(:provincia, "Provincia:")%>
-	<%= text_field_tag(:provincia)%><br/>
-
-	<%=label_tag(:email, "Direccion de correo:")%>
-	<%=email_field_tag(:email )%><br/>
-	
-	<%=label_tag(:tel, "Teléfono:")%>
-	<%=number_field_tag(:tel) %> <br/>
+	<input type="hidden" name="precio" value="<%=@productos.precio%>"/>
 		
 	<br/>
 	<%= submit_tag("Pagar" )%>
