--- a/app/views/producto/index.html.erb
+++ b/app/views/producto/index.html.erb
@@ -1,10 +1,8 @@
-
-
 <h1>Todos los Productos</h1>
-<%for producto_actual in @productos%>
-<a href="/Ticketing/detalle_producto"><img src="<%=producto_actual.imagen%>"></a>
-<%=producto_actual.titular%><br />
-<%=producto_actual.to_s%><br />
-<%=producto_actual.pedido.mail%><br />
-<%end%>
-
+			<%for producto in @productos %>
+			  <img src="<%= producto.imagen %>" />
+    		  <a href="/producto/detalle_producto?id=<%= producto.id %>">Detalles del producto</a>
+    		  <%=producto.titular%>
+    		  
+    		  
+    		<%end%>
