Conflictos de vistas corregidos

--- a/app/views/pedido/pagarVista.html.erb
+++ b/app/views/pedido/pagarVista.html.erb
@@ -1,5 +1,3 @@
-<<<<<<< HEAD
-GRACIAS POR SU COMPRA. AHORA A PAGAR!
-=======
-GRACIAS POR SU COMPRA!
->>>>>>> a112cd123b0884c3a2c51e3c2996e8afdd36bfac
+
+GRACIAS POR SU COMPRA
+
