--- a/app/views/producto/_header.html.erb
+++ b/app/views/producto/_header.html.erb
@@ -2,9 +2,9 @@
 <header class="cabecera">
 	<a href="/" class="titulocabecera"><h1>Bienvenido a nuestro Ticketing</h1></a>
 	<ul>
-		<li class="enlace"><a href="/producto/mostrar_codigos">Códigos</a></li>
+		<li class="enlace"><a href="/codigos/index">Códigos</a></li>
 		<li class="enlace">&nbsp&nbsp | &nbsp&nbsp</li>
-		<li class="enlace"><a href="/producto/mostrar_entradas">Entradas</a></li>
+		<li class="enlace"><a href="/entradas/index">Entradas</a></li>
 	</ul>
 	
 	<form name="boton_buscar" action="/producto/buscar" method="get">
