Modificacion del metodo create, ahora cuando das a comprar marca como comprado el codigo/entrada y genera las relaciones correctamente

--- a/app/views/pedido/new.html.erb
+++ b/app/views/pedido/new.html.erb
@@ -48,7 +48,7 @@ Tipo: <%=@productos.tipoProducto%><br/>
 	<%=text_field_tag(:cif )%><br/>
 	
 	Importe:<%=@productos.precio%><br/>
-	
+	<input type="hidden" name="id" value="<%=@id%>" />
 	<br/>
 	<%= submit_tag("Pagar" )%>
 	<% end %>
