--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,10 +1,12 @@
 a.titulocabecera:link{
 	text-decoration:none;
+	
 	}  
 
 .cabecera{
-  background-color: #00BFFF;
+  background: #f2eeee url('logo.png') no-repeat fixed;
   padding:35px;
+  margin-left: 5px;
 }
 
 .enlace{
