--- a/app/views/producto/buscar.html.erb
+++ b/app/views/producto/buscar.html.erb
@@ -4,13 +4,13 @@
 			 	<li><h6><%=producto.titular%></h6> </li>
 			 	<li>
 				 	<%if producto.tipoProducto == "codigo"%>
-				 		<a href="/producto/detalles_producto?id=<%= producto.id %>"><%= image_tag("codigo-qr.jpg", :alt => "Codigo") %></a>
+				 		<a href="/producto/show?id=<%= producto.id %>"><%= image_tag("codigo-qr.jpg", :alt => "Codigo") %></a>
 				 	<%else%>
-				 		<a href="/producto/detalles_producto?id=<%= producto.id %>"><%= image_tag("news_entrada.png", :alt => "entrada") %></a>
+				 		<a href="/producto/show?id=<%= producto.id %>"><%= image_tag("news_entrada.png", :alt => "entrada") %></a>
 				 	<%end%>
 			 	</li>	 	
 			 	<li>
-			 		<a href="/producto/detalles_producto?id=<%= producto.id %>">Detalles del producto</a> 
+			 		<a href="/producto/show?id=<%= producto.id %>">Detalles del producto</a> 
 			 	</li>
 			 </ul>   		  
     		<%end%>
