Cambios en mailing, ya muestra el codigo comprado en el correo

--- a/app/views/compra/correoCompra.html.erb
+++ b/app/views/compra/correoCompra.html.erb
@@ -15,7 +15,8 @@
   		Codigo postal <%=@factura.cp%><br />
   		Provincia <%=@factura.provincia%> <br />
   		Localidad <%=@factura.localidad%><br />
-  		Importe <%=@factura.importe%>
+  		Importe <%=@factura.importe%><br />
+  		Codigo comprado: <%=@codigoComprado%>
   	</p>
 
   </body>
