--- a/app/views/pedido/new.html.erb
+++ b/app/views/pedido/new.html.erb
@@ -48,7 +48,7 @@ Tipo: <%=@productos.tipoProducto%><br/>
 	<%=text_field_tag(:cif )%><br/>
 	
 	Importe:<%=@productos.precio%><br/>
-	<input type="hidden" name="id" value="<%=@id%>" />
+	<input type="hidden" name="id" value="<%=@productos.id%>" />
 	<br/>
 	<%= submit_tag("Pagar" )%>
 	<% end %>
