--- a/app/views/producto/index.html.erb
+++ b/app/views/producto/index.html.erb
@@ -1,24 +1,22 @@
 
-<h1>Todos los Productos</h1>
-		
-<section>
-			<%for producto in @productos %>
-			<%if producto.stock>0 && producto.estado=='activo'%>
-				 <ul>
-				 	<li><h6><%=producto.titular%></h6> </li>
-				 	<li>
-						<a href="/producto/show?id=<%= producto.id %>"><%= image_tag producto.imagen.url(:thumb)%></a>
-				 	</li>	 	
-				 	<li>
-				 		<a href="/producto/show?id=<%= producto.id %>">Detalles del producto</a> 
-				 	</li>
-				 	<li>
-				 		Unidades disponibles: <%=producto.stock%>
-				 	</li>
-				 </ul>   		  
-			 <%end%>
-    		<%end%>
- </section>  
-  		
- <p id="ref_admin"><a href="/admin">Admin</a></p>
+<div class="container">
+	<div class="row">
+		<%for producto in @productos %>
+		<%if producto.stock>0 && producto.estado=='activo'%>
 
+		<div class="col-sm-6 col-md-4">
+			<p>
+				<%= producto.titular%>
+			</p>
+			<p>
+				Unidades disponibles: <%= producto.stock%>
+			</p>
+			<a href="/producto/show?id=<%= producto.id %>"><%= image_tag producto.imagen.url(:thumb)%></a>
+		</div>
+		<%end%>
+		<%end%>
+	</div>
+	<p id="ref_admin">
+		<a href="/admin">Admin</a>
+	</p>
+</div>
