--- a/app/views/producto/index.html.erb
+++ b/app/views/producto/index.html.erb
@@ -3,8 +3,8 @@
 	<div class="row">
 		<%for producto in @productos %>
 		<%if producto.stock>0 && producto.estado=='activo'%>
-
-		<div class="col-sm-6 col-md-4">
+		<a href="/producto/show?id=<%= producto.id %>">
+		<div class="col-sm-6 col-md-4" style="box-shadow: 10px 10px 5px #888888">
 			<p>
 				<%= producto.titular%>
 			</p>
@@ -12,11 +12,13 @@
 				Unidades disponibles: <%= producto.stock%>
 			</p>
 			<a href="/producto/show?id=<%= producto.id %>"><%= image_tag producto.imagen.url(:thumb)%></a>
-		</div>
+		</div></a>
 		<%end%>
 		<%end%>
 	</div>
-	<p id="ref_admin">
+	
+</div>
+
+<p id="ref_admin">
 		<a href="/admin">Admin</a>
 	</p>
-</div>
