--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -21,8 +21,8 @@
        otro elemento que se pueda ocultar al minimizar la barra -->
   <div class="collapse navbar-collapse navbar-ex1-collapse">
     <ul class="nav navbar-nav">
-      <li class="active"><a href="/entradas/index">Entradas</a></li>
-      <li><a href="/codigos/index">Códigos</a></li>
+      <li><a class="enlace" href="/entradas/index">Entradas</a></li>
+      <li><a class="enlace" href="/codigos/index">Códigos</a></li>
     </ul>
  
     <form class="navbar-form navbar-left" role="search" action="producto/search">
