Ahora se muestra el stock en las vistas filtradas

--- a/app/views/codigos/index.html.erb
+++ b/app/views/codigos/index.html.erb
@@ -9,6 +9,9 @@
 			 	<li>
 			 		<a href="/producto/detalles_producto?id=<%= productoCodigo.id %>">Detalles del producto</a> 
 			 	</li>
+			 	<li>
+				Unidades disponibles: <%= productoCodigo.stock%>
+				</li>
 			 </ul>   		  
     		<%end%>
  </section>  
