--- a/app/views/entradas/index.html.erb
+++ b/app/views/entradas/index.html.erb
@@ -9,6 +9,9 @@
 			 	<li>
 			 		<a href="/producto/detalles_producto?id=<%= productoEntrada.id %>">Detalles del producto</a> 
 			 	</li>
+			 	<li>
+				Unidades disponibles: <%= productoEntrada.stock%>
+				</li>
 			 </ul>   		  
     		<%end%>
  </section>  
