--- a/app/views/codigos/index.html.erb
+++ b/app/views/codigos/index.html.erb
@@ -7,7 +7,7 @@
 			 		<a href="/producto/show?id=<%= productoCodigo.id %>"><%= image_tag productoCodigo.imagen.url(:thumb)%></a>
 			 	</li>	 	
 			 	<li>
-			 		<a href="/producto/detalles_producto?id=<%= productoCodigo.id %>">Detalles del producto</a> 
+			 		<a href="/producto/show?id=<%= productoCodigo.id %>">Detalles del producto</a> 
 			 	</li>
 			 	<li>
 				Unidades disponibles: <%= productoCodigo.stock%>
