Correccion del motor de busqueda

--- a/app/views/producto/search.html.erb
+++ b/app/views/producto/search.html.erb
@@ -10,7 +10,7 @@
 				 	<%end%>
 			 	</li>	 	
 			 	<li>
-			 		<a href="/producto/show?id=<%= producto.id %>">Detalles del producto</a> 
+			 		<a href="/show?id=<%= producto.id %>">Detalles del producto</a> 
 			 	</li>
 			 </ul>   		  
     		<%end%>
