Correcion de las busquedas en las vistas filtradas de entradas y codigos

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -37,7 +37,7 @@
 
  <% else%>
  
-    <form class="navbar-form navbar-left" role="search" action="producto/search">
+    <form class="navbar-form navbar-left" role="search" action="/producto/search">
       <div class="form-group">
         <input type="text" class="form-control" placeholder="Buscar" name="busqueda">
       </div>
