Vistas activeadmin reformadas

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,7 +16,7 @@
 
 @import "bootstrap";
 
-body { background-image: url('background.jpg') !important; }
+// body { background-image: url('background.jpg') !important; }
 
 a.enlace {
   text-decoration: none;
