--- a/app/views/productos/show.html.erb
+++ b/app/views/productos/show.html.erb
@@ -7,5 +7,5 @@
 <br>
 <%= image_tag @producto.imagen.url(:medium)%>
 <br>
-<a href="/pedido/new?id=<%= @producto.id %>">Comprar</a>
-<a href="/producto/index">Volver</a>
+<a href="/pedidos/new?id=<%= @producto.id %>">Comprar</a>
+<a href="/productos/index">Volver</a>
