--- a/app/views/productos/index.html.erb
+++ b/app/views/productos/index.html.erb
@@ -3,7 +3,7 @@
 	<div class="row">
 		<%for producto in @productos %>
 		<%if producto.stock>0 && producto.estado=='activo'%>
-		<a href="/producto/show?id=<%= producto.id %>">
+		<a href="/productos/show?id=<%= producto.id %>">
 		<div class="col-sm-6 col-md-4" style="box-shadow: 10px 10px 5px #888888">
 			<p>
 				<%= producto.titular%>
@@ -11,7 +11,7 @@
 			<p>
 				Unidades disponibles: <%= producto.stock%>
 			</p>
-			<a href="/producto/show?id=<%= producto.id %>"><%= image_tag producto.imagen.url(:thumb)%></a>
+			<a href="/productos/show?id=<%= producto.id %>"><%= image_tag producto.imagen.url(:thumb)%></a>
 		</div></a>
 		<%end%>
 		<%end%>
