--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -132,7 +132,7 @@
     <div class="row">
         <!--fontawesome icons-->
         <div class="btn-group">
-  <a class="btn btn-default" href="#"><i class="fa fa-align-left"></i></a>
+  <a class="btn btn-default" href="https://github.com/Grupo4Talentum/TalentumTicketing"><img src="Ticketing2/app/assets/images/github.png" class="fa fa-align-left">HOLA, probando texto jaja</img></a>
   <a class="btn btn-default" href="#"><i class="fa fa-align-center"></i></a>
   <a class="btn btn-default" href="#"><i class="fa fa-align-right"></i></a>
   <a class="btn btn-default" href="#"><i class="fa fa-align-justify"></i></a>
