--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,11 +1,18 @@
+
+
 <nav class="navbar navbar-default" role="navigation">
   <!-- El logotipo y el icono que despliega el menú se agrupan
        para mostrarlos mejor en los dispositivos móviles -->
+  
   <div class="container-fluid">
+  	
    <div class="row">
-	<img src="<%= asset_path( 'headerback.jpg' ) %>" class="img-responsive">
+   
+	<img src="<%= asset_path( '' ) %>" class="img-responsive">
    </div>
+
 </div>
+
   <div class="navbar-header">
     <button type="button" class="navbar-toggle" data-toggle="collapse"
             data-target=".navbar-ex1-collapse">
@@ -14,39 +21,27 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand" href="/">Ticketing</a>
+    <a class="navbar-brand" href="/"> <img src="<%= asset_path( 'logoticketing3.png' ) %>" class="img-responsive"> </a>
   </div>
- 
+
   <!-- Agrupar los enlaces de navegación, los formularios y cualquier
        otro elemento que se pueda ocultar al minimizar la barra -->
+ 
   <div class="collapse navbar-collapse navbar-ex1-collapse">
     <ul class="nav navbar-nav">
       <li><a class="enlace" href="/productos/entradas/index">Entradas</a></li>
       <li><a class="enlace" href="/productos/codigos/index">Códigos</a></li>
     </ul>
- <% if params[:busqueda]%>
  
- 	<form class="navbar-form navbar-left" role="search" action="search">
+    <form class="navbar-form navbar-left" role="search" action="productos/search">
       <div class="form-group">
-        <input type="text" class="form-control" placeholder="Buscar" name="busqueda">
+        <input type="text" class="form-control" placeholder="" name="busqueda">
       </div>
-      <button type="submit" class="btn btn-default">Enviar</button>
+      <button type="submit" class="btn btn-default">Buscar</button>
     </form>
   </div>
 </nav>
 
- <% else%>
- 
-    <form class="navbar-form navbar-left" role="search" action="/productos/search">
-      <div class="form-group">
-        <input type="text" class="form-control" placeholder="Buscar" name="busqueda">
-      </div>
-      <button type="submit" class="btn btn-default">Enviar</button>
-    </form>
-  </div>
-</nav>
-
-<% end %>
 
 
 <!-- <header class="cabecera">
