--- a/app/views/productos/index.html.erb
+++ b/app/views/productos/index.html.erb
@@ -4,14 +4,17 @@
 		<%for producto in @productos %>
 		<%if producto.stock>0 && producto.estado=='activo'%>
 		<a href="/productos/show?id=<%= producto.id %>">
-		<div class="col-sm-6 col-md-4" style="box-shadow: 10px 10px 5px #888888">
-			<p>
+		<div id="hola"class="col-sm-6 col-md-4" style="background-color:white">
+			<p id="imagenproducto">
+			<a href="/productos/show?id=<%= producto.id %>"><%= image_tag producto.imagen.url(:thumb), class: "img-responsive aspect"%></a>
+			</p>
+			<p class="titular">
 				<%= producto.titular%>
 			</p>
-			<p>
+			<p class="unidadesdisponibles">
 				Unidades disponibles: <%= producto.stock%>
 			</p>
-			<a href="/productos/show?id=<%= producto.id %>"><%= image_tag producto.imagen.url(:thumb)%></a>
+			
 		</div></a>
 		<%end%>
 		<%end%>
