--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -33,7 +33,20 @@
       <li><a class="enlace" href="/productos/codigos/index">Códigos</a></li>
     </ul>
  
-    <form class="navbar-form navbar-left" role="search" action="productos/search">
+ 	<% if params[:busqueda]%>
+  
+  	<form class="navbar-form navbar-left" role="search" action="search">
+       <div class="form-group">
+         <input type="text" class="form-control" placeholder="Buscar" name="busqueda">
+       </div>
+       <button type="submit" class="btn btn-default">Enviar</button>
+     </form>
+   </div>
+ </nav>
+ 
+  <% else%>
+ 
+    <form class="navbar-form navbar-left" role="search" action="/productos/search">
       <div class="form-group">
         <input type="text" class="form-control" placeholder="" name="busqueda">
       </div>
@@ -42,7 +55,7 @@
   </div>
 </nav>
 
-
+<% end %>
 
 <!-- <header class="cabecera">
 	<a href="/" class="titulocabecera"><h1>Bienvenido a nuestro Ticketing</h1></a>
