pequeños cambios para la muestra del pedido comprado

--- a/app/views/pedidos/show.html.erb
+++ b/app/views/pedidos/show.html.erb
@@ -1,5 +1,6 @@
-<% @pedidos.each do |pedido|%>
+<h3>Enhorabuena por la compra</h3>
+<h4>Estos son los datos de su pedido:</h4>
 
-<%= pedido.mail %>
+<%= @pedido.nombre %>
 
-<% end %>
+<%= @pedido.mail %>
