pequeños cambios en el form

--- a/app/views/pedidos/show.html.erb
+++ b/app/views/pedidos/show.html.erb
@@ -1,6 +1,11 @@
+<div class="container">
 <h3>Enhorabuena por la compra</h3>
 <h4>Estos son los datos de su pedido:</h4>
-
+  
 <%= @pedido.nombre %>
 
 <%= @pedido.mail %>
+
+<button type="button" class="btn btn-success" target="/">¡Quiero comprar más!</button>
+</div>
+
