--- a/app/views/pedidos/new.html.erb
+++ b/app/views/pedidos/new.html.erb
@@ -26,37 +26,37 @@
 				<div class="form-group">
 					<label class="control-label col-xs-3">Calle</label>
 					<div class="col-xs-9">
-						<input type="text" name="calle" class="form-control" placeholder="Apellidos">
+						<input type="text" name="calle" class="form-control" placeholder="Calle">
 					</div>
 				</div>
 				<div class="form-group">
 					<label class="control-label col-xs-3" >Numero</label>
 					<div class="col-xs-9">
-						<input type="number" name="numero" class="form-control" placeholder="Telefono">
+						<input type="number" name="numero" class="form-control" placeholder="Numero">
 					</div>
 				</div>
 				<div class="form-group">
 					<label class="control-label col-xs-3" >Código Postal</label>
 					<div class="col-xs-9">
-						<input type="text" name="cp" class="form-control" placeholder="Telefono">
+						<input type="text" name="cp" class="form-control" placeholder="Código Postal">
 					</div>
 				</div>
 				<div class="form-group">
 					<label class="control-label col-xs-3" >Localidad</label>
 					<div class="col-xs-9">
-						<input type="text" name="localidad" class="form-control" placeholder="Telefono">
+						<input type="text" name="localidad" class="form-control" placeholder="Localidad">
 					</div>
 				</div>
 				<div class="form-group">
 					<label class="control-label col-xs-3" >Provincia</label>
 					<div class="col-xs-9">
-						<input type="text" name="provincia" class="form-control" placeholder="Telefono">
+						<input type="text" name="provincia" class="form-control" placeholder="Provincia">
 					</div>
 				</div>
 				<div class="form-group">
 					<label class="control-label col-xs-3" >CIF</label>
 					<div class="col-xs-9">
-						<input type="text" name="cif" class="form-control" placeholder="Telefono">
+						<input type="text" name="cif" class="form-control" placeholder="CIF">
 					</div>
 				</div>
 				<div class="form-group">
