--- a/app/views/pedidos/new.html.erb
+++ b/app/views/pedidos/new.html.erb
@@ -2,9 +2,12 @@
 	<div class="row">
 		<div class="col-sm-2">
 			<h4>Resumen de su pedido</h4>
-			<span>Vas a comprar: <%= @productos.titular%></span> <br>
-			<img src="<%= @productos.imagen%>"/><br>
-			<span>Descripción<%= @productos.descripcion%></span><br>
+			<span>Vas a comprar: <%= @productos.titular%></span>
+			<br>
+			<img src="<%= @productos.imagen%>"/>
+			<br>
+			<span>Descripción<%= @productos.descripcion%></span>
+			<br>
 			<span>Precio: <%= @productos.precio%> euros</span>
 		</div>
 		<div class="col-sm-10">
@@ -61,7 +64,7 @@
 				</div>
 				<div class="form-group">
 					<div class="col-xs-offset-3 col-xs-9">
-						<input type="submit" class="btn btn-primary" value="Pagar">
+						<input type="submit" class="btn btn-info" value="Pagar">
 						<input type="reset" class="btn btn-default" value="Limpiar">
 					</div>
 				</div>
