--- a/app/views/productos/show.html.erb
+++ b/app/views/productos/show.html.erb
@@ -14,7 +14,7 @@
 			<br>
 
 			<br>
-			<button type="button" class="btn btn-info" target="/pedidos/new?id=<%= @producto.id %>">Ir a Comprar</button> 
+			<a href="/pedidos/new?id=<%= @producto.id %>"><button type="submit" class="btn btn-info">Ir a Comprar</button></a>
 			<a href="/productos/index">Volver</a>
 		</div>
 	</div>
