Cambios varios de bootstrap

--- a/app/views/productos/index.html.erb
+++ b/app/views/productos/index.html.erb
@@ -13,6 +13,8 @@
 			<p class="unidadesdisponibles">
 				Unidades disponibles: <%= producto.stock%>
 			</p>
+			<a href="/pedidos/new?id=<%= producto.id %>"><button type="submit" class="btn btn-info">Comprar</button></a>
+			<a href="/productos/show?id=<%= producto.id %>"><button type="submit" class="btn btn-success" role="button">Detalles</button></a>
 			
 		</div></a>
 		<%end%>
