Cambio en paypal_url

--- a/app/views/pedidos/show.html.erb
+++ b/app/views/pedidos/show.html.erb
@@ -6,6 +6,8 @@
 
 <%= @pedido.mail %>
 
-<button type="button" class="btn btn-success" target="/">¡Quiero comprar más!</button>
+<%= @pedido.producto.titular%>
+
+<a href="/"><button type="button" class="btn btn-success">¡Quiero comprar más!</button></a>
 </div>
 
