Cambios en rutas

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -18,10 +18,10 @@
 	<div class="collapse navbar-collapse navbar-ex1-collapse">
 		<ul class="nav navbar-nav">
 			<li>
-				<a class="enlace" href="/productos/entradas/index">Entradas</a>
+				<a class="enlace" href="/productos/entradas">Entradas</a>
 			</li>
 			<li>
-				<a class="enlace" href="/productos/codigos/index">Códigos</a>
+				<a class="enlace" href="/productos/codigos">Códigos</a>
 			</li>
 		</ul>
 
