--- a/app/views/productos/index.html.erb
+++ b/app/views/productos/index.html.erb
@@ -5,7 +5,12 @@
 		<a href="/productos/show?id=<%= producto.id %>">
 		<div id="hola"class="col-sm-6 col-md-4" style="background-color:white">
 			<p id="imagenproducto">
-			<a href="/productos/show?id=<%= producto.id %>"><%= image_tag producto.imagen.url(:thumb), class: "img-responsive aspect"%></a>
+			<%if producto.imagen_file_name%>
+				<a href="/productos/show?id=<%= producto.id %>"><%= image_tag producto.imagen.url(:thumb), class: "img-responsive aspect"%></a>
+				
+			<%else%>
+				<a href="/productos/show?id=<%= producto.id %>"><img src="<%=asset_path ('ticketinglogo.png')%>" class= 'img-responsive aspect'></a>
+			<%end%>
 			</p>
 			<p class="titular">
 				<%= producto.titular%>
