--- a/app/views/pedidos/new.html.erb
+++ b/app/views/pedidos/new.html.erb
@@ -16,15 +16,15 @@
 				<input type="hidden" name="id" value="<%= @productos.id%>" />
 
 				<div class="form-group">
-					<label class="control-label col-xs-3">Email</label>
+					<label class="control-label col-xs-3">Email*</label>
 					<div class="col-xs-9">
-						<input type="email" name="mail"class="form-control" id="inputEmail" placeholder="Email">
+						<input type="email" name="mail"class="form-control" id="inputEmail" placeholder="Email" required>
 					</div>
 				</div>
 				<div class="form-group">
-					<label class="control-label col-xs-3">Nombre</label>
+					<label class="control-label col-xs-3">Nombre*</label>
 					<div class="col-xs-9">
-						<input type="text" name="nombre" class="form-control" placeholder="Nombre">
+						<input type="text" name="nombre" class="form-control" placeholder="Nombre" required>
 					</div>
 				</div>
 				<div class="form-group">
