--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -46,3 +46,12 @@ a.enlace {
 #hola{
   margin:2em;
 }
+
+#menulateral{
+  margin-top: 0.4em;
+  align:right;
+}
+
+.imp-responsive{
+  margin-top:none;
+}
