--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,19 @@
 
-<footer class="pie"> Todos los derechos reservados seguramente </footer>
+<footer>
+<div class="container" style="background-color: white">
+					<div class="row">
+						<div class="col-sm-6 col-md-4">
+							<a href="http://talentumempleo.com/" target="_blank"><img src="<%= asset_path( 'talentumempleo.jpg' ) %>" alt="talentumempleo"/></a>
+						</div>
+						<div class="col-sm-6 col-md-4">
+							<a href="https://github.com/Grupo4Talentum/TalentumTicketing" target="_blank"><img src="<%= asset_path( 'github.png' ) %>" alt="github"/></a>
+						</div>
+						<div class="col-sm-6 col-md-4">
+							<a href="http://www.inspiringbenefits.com/" target="_blank"><img src="<%= asset_path( 'inspiringbenefits.png' ) %>" alt="inspiringbenefits"/></a>
+						</div>
+				
+		</div>
+	</div>
+</div>
 
-<!DOCTYPE html>
+</footer>
