--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
 
-<footer>
-<div class="container" style="background-color: white">
+<footer class="navbar-fixed-bottom">
+<div class="container" style="background-color:white; width:100%">
 					<div class="row">
 						<div class="col-sm-6 col-md-4">
 							<a href="http://talentumempleo.com/" target="_blank"><img src="<%= asset_path( 'talentumempleo.jpg' ) %>" alt="talentumempleo"/></a>
