--- a/app/views/productos/show.html.erb
+++ b/app/views/productos/show.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" style="margin-top:4em;">
 <div class="col-md-12">
 	<div class="row">
 		<div class="col-sm-2">
@@ -21,7 +21,7 @@
 
 			<br>
 			<a href="/pedidos/new?id=<%= @producto.id %>"><button type="submit" class="btn btn-info">Ir a Comprar</button></a>
-			<a href="/productos/index">Volver</a>
+			<a href="/productos/index"><button type="submit" class="btn btn-default">Volver</button></a>
 		</div>
 	</div>
 </div>
