--- a/app/views/pedidos/new.html.erb
+++ b/app/views/pedidos/new.html.erb
@@ -65,8 +65,7 @@
 				</div>
 				<div class="form-group">
 					<div class="col-xs-offset-3 col-xs-9">
-						<input type="submit" class="btn btn-info" value="Pagar">
-						<input type="reset" class="btn btn-default" value="Limpiar">
+						<button type="submit" class="btn btn-primary">Pagar</button>
 					</div>
 				</div>
 			</form>
