--- a/app/views/codigos/index.html.erb
+++ b/app/views/codigos/index.html.erb
@@ -2,6 +2,7 @@
 <div class="container">
 		<div class="row">
 			<%for productoCodigo in @listadoProductosCodigo %>
+			<%if productoCodigo.stock>0 && productoCodigo.estado=='activo'%>
 			<div id="hola"class="col-sm-6 col-md-4" style="background-color:white">
 			<a href="/productos/show?id=<%= productoCodigo.id %>">
 		
@@ -23,6 +24,7 @@
 			<a href="/productos/show?id=<%= productoCodigo.id %>"><button type="submit" class="btn btn-success" role="button">Detalles</button></a>
 			
 		</div></a>
+    		<%end%>
     		<%end%>
     	</div>
 </div>
