Actualizacion de la imagen por defecto de los productos

--- a/app/views/entradas/index.html.erb
+++ b/app/views/entradas/index.html.erb
@@ -10,7 +10,7 @@
 				<a href="/productos/show?id=<%= productoEntrada.id %>"><%= image_tag productoEntrada.imagen.url(:thumb), class: "img-responsive aspect"%></a>
 				
 			<%else%>
-				<a href="/productos/show?id=<%= productoEntrada.id %>"><img src="<%=asset_path ('ticketinglogo.png')%>" class= 'img-responsive aspect'></a>
+				<a href="/productos/show?id=<%= productoEntrada.id %>"><img src="<%=asset_path ('ticket.PNG')%>" class= 'img-responsive aspect'></a>
 			<%end%>
 			</p>
 			<p class="titular">
