--- a/app/views/codigos/index.html.erb
+++ b/app/views/codigos/index.html.erb
@@ -11,7 +11,7 @@
 				<a href="/productos/show?id=<%= productoCodigo.id %>"><%= image_tag productoCodigo.imagen.url(:thumb), class: "img-responsive aspect"%></a>
 				
 			<%else%>
-				<a href="/productos/show?id=<%= productoCodigo.id %>"><img src="<%=asset_path ('ticketinglogo.png')%>" class= 'img-responsive aspect'></a>
+				<a href="/productos/show?id=<%= productoCodigo.id %>"><img src="<%=asset_path ('ticket.PNG')%>" class= 'img-responsive aspect'></a>
 			<%end%>
 			</p>
 			<p class="titular">
