Vista show actualizada

--- a/app/views/productos/show.html.erb
+++ b/app/views/productos/show.html.erb
@@ -6,7 +6,7 @@
 				<%= image_tag @producto.imagen.url(:medium), class: "img-responsive aspect"%>
 				
 			<%else%>
-				<img src="<%=asset_path ('ticketinglogo.png')%>" class= 'img-responsive aspect'>
+				<img src="<%=asset_path ('ticket.PNG')%>" class= 'img-responsive aspect'>
 			<%end%>
 			
 		</div>
