Ahora se muestra ek titular del producto comprado en el mail y el pdf

--- a/app/views/compra/correoCompra.html.erb
+++ b/app/views/compra/correoCompra.html.erb
@@ -16,6 +16,8 @@
   		Provincia <%=@factura.provincia%> <br />
   		Localidad <%=@factura.localidad%><br />
   		Importe <%=@factura.importe%><br />
+  		<br />
+  		Producto comprado: <%=@producto.titular%><br />
   		Codigo comprado: <%=@codigoComprado%>
   	</p>
 
