--- a/app/views/compra/correoCompra.html.erb
+++ b/app/views/compra/correoCompra.html.erb
@@ -41,11 +41,8 @@
 		<p>
 			<b>Has comprado: </b><%= @producto.titular%>
 		</p>
-		<div style="border: 1px solid black; width: 125px; height: 100px; margin: 0 auto; text-align: center;">
-			Código
-			<div style="border: 1px dotted black; text-align:center ;line-height:75px;width:75px;height:75px;font-size:20px; margin: 0 auto;">
-				<%= @codigoComprado%>
-			</div>
+		<div style="border: 1px solid black;"><p style="text-align: center;"><u>Código</u></p>
+			 <p style="border: 1px dotted black; text-align: center; font-size: 20px;"><%= @codigoComprado%></p>
 		</div>
 		<hr />
 		<footer style="text-align: center;">
