--- a/app/views/compra/correoCompra.html.erb
+++ b/app/views/compra/correoCompra.html.erb
@@ -35,7 +35,7 @@
 		</p>
 		<hr />
 		<p>
-			<strong style="font-family: Helvetica">Importe: </span> <%= @factura.importe.to_i%> euros
+			<strong style="font-family: Helvetica">Importe: </span> <%= @factura.importe%> euros
 		</p>
 
 		<p>
